force-app/main/default/objects/Income__c/Income__c.object-meta.xml
<CustomObject>
    <description>Income for HHS-related programs.  IE Demo.  (BTMURPHY)</description>
    <label>Income</label>
    <nameField>
        <displayFormat>INC-{0000000}</displayFormat>
        <label>Income Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Income</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>