force-app/main/default/objects/Income__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <inlineHelpText>Tell us the total gross pay you receive each pay period. By gross pay, we mean the amount you earn before taxes or anything else is taken out of the pay check. By pay period, we mean the time between each pay check.</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>