force-app/main/default/objects/Income__c/fields/Bonuses_Tips_Commissions__c.field-meta.xml
<CustomField>
    <fullName>Bonuses_Tips_Commissions__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do you receive any of the following at this job?:  Bonuses, Tips &amp; Commissions</inlineHelpText>
    <label>Bonuses, Tips &amp; Commissions</label>
    <type>Checkbox</type>
</CustomField>