force-app/main/default/objects/Income__c/fields/Effective_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_End_Date__c</fullName>
    <inlineHelpText>The data that the job ended</inlineHelpText>
    <label>Effective End Date</label>
    <type>Date</type>
</CustomField>