force-app/main/default/objects/Income__c/fields/Effective_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Start_Date__c</fullName>
    <inlineHelpText>The date that the job started</inlineHelpText>
    <label>Effective Start Date</label>
    <type>Date</type>
</CustomField>