force-app/main/default/objects/Income__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <inlineHelpText>What is the frequency of how the person is paid?  A pay period is generally the time over which you are paid to do your job. This is usually listed on your paycheck. Often the frequency will be one month, two weeks or twice a month.</inlineHelpText>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Every Week</fullName>
            </value>
            <value>
                <fullName>Every 2 Weeks</fullName>
            </value>
            <value>
                <fullName>Twice a Month</fullName>
            </value>
            <value>
                <fullName>Once a Month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>