force-app/main/default/objects/Income__c/fields/Hours__c.field-meta.xml
<CustomField>
    <fullName>Hours__c</fullName>
    <inlineHelpText>Tell us how many hours you work in a regular work week. If your work hours vary from week to week, please tell us an average amount of hours that you work. We ask this question to determine if you are considered a full-time or a part-time employee.</inlineHelpText>
    <label>Hours per Week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>