force-app/main/default/objects/Income__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>Please select the type of employment-related income</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cash Assistance</fullName>
            </value>
            <value>
                <fullName>Child Support/Alimony</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pension/Retirement</fullName>
            </value>
            <value>
                <fullName>Self-Employment</fullName>
            </value>
            <value>
                <fullName>Social Security</fullName>
            </value>
            <value>
                <fullName>SSI</fullName>
            </value>
            <value>
                <fullName>Tribal Payments</fullName>
            </value>
            <value>
                <fullName>Unemployment Compensation</fullName>
            </value>
            <value>
                <fullName>Veteran&apos;s Benefit</fullName>
            </value>
            <value>
                <fullName>Wages/Employment</fullName>
                <default>true</default>
                <label>Wages/Employment</label>
            </value>
            <value>
                <fullName>Worker&apos;s Compensation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>